--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,28 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!-- Mobile meta tags to go in head-->
-        <meta name="HandheldFriendly" content="True">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <meta name="MobileOptimized" content="320"/>
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta http-equiv="cleartype" content="on">
+        <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="css/leaflet.css"><link rel="stylesheet" href="css/L.Control.Locate.min.css">
+        <link rel="stylesheet" href="css/leaflet.css">
         <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
-        <link rel="stylesheet" href="css/leaflet-control-geocoder.Geocoder.css">
         <style>
-        html, body, #map {
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
-        .leaflet-popup-content {
-        min-width: 200px;
-        min-height: 100px;
-        overflow-y: scroll;
+        #map {
+            width: 3179px;
+            height: 1212px;
         }
         </style>
         <title></title>
@@ -33,7 +20,7 @@
         <div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
-        <script src="js/leaflet.js"></script><script src="js/L.Control.Locate.min.js"></script>
+        <script src="js/leaflet.js"></script>
         <script src="js/leaflet.rotatedMarker.js"></script>
         <script src="js/leaflet.pattern.js"></script>
         <script src="js/leaflet-hash.js"></script>
@@ -41,76 +28,31 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
-        <script src="data/Route_1.js"></script>
-        <script src="data/Veer_2.js"></script>
+        <script src="data/Veer_1.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[42.3550488365331,-9.359057391065907],[61.62229785451299,67.44170885888741]]);
+        }).fitBounds([[43.69130647228513,-29.687931563415628],[61.01892381624114,41.84010525376363]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
-        L.control.locate({locateOptions: {maxZoom: 19}}).addTo(map);
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
         }
-        map.createPane('pane_GoogleTerrainHybrid_0');
-        map.getPane('pane_GoogleTerrainHybrid_0').style.zIndex = 400;
-        var layer_GoogleTerrainHybrid_0 = L.tileLayer('https://mt1.google.com/vt/lyrs=p&x={x}&y={y}&z={z}', {
-            pane: 'pane_GoogleTerrainHybrid_0',
+        map.createPane('pane_CartoDbDarkMatter_0');
+        map.getPane('pane_CartoDbDarkMatter_0').style.zIndex = 400;
+        var layer_CartoDbDarkMatter_0 = L.tileLayer('http://basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png', {
+            pane: 'pane_CartoDbDarkMatter_0',
             opacity: 1.0,
             attribution: '',
             minZoom: 1,
             maxZoom: 28,
             minNativeZoom: 0,
-            maxNativeZoom: 19
+            maxNativeZoom: 20
         });
-        layer_GoogleTerrainHybrid_0;
-        map.addLayer(layer_GoogleTerrainHybrid_0);
-        function pop_Route_1(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Name'] !== null ? autolinker.link(feature.properties['Name'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Type'] !== null ? autolinker.link(feature.properties['Type'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Transport'] !== null ? autolinker.link(feature.properties['Transport'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_Route_1_0() {
-            return {
-                pane: 'pane_Route_1',
-                opacity: 1,
-                color: 'rgba(3,3,243,1.0)',
-                dashArray: '',
-                lineCap: 'square',
-                lineJoin: 'bevel',
-                weight: 1.0,
-                fillOpacity: 0,
-                interactive: true,
-            }
-        }
-        map.createPane('pane_Route_1');
-        map.getPane('pane_Route_1').style.zIndex = 401;
-        map.getPane('pane_Route_1').style['mix-blend-mode'] = 'normal';
-        var layer_Route_1 = new L.geoJson(json_Route_1, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_Route_1',
-            layerName: 'layer_Route_1',
-            pane: 'pane_Route_1',
-            onEachFeature: pop_Route_1,
-            style: style_Route_1_0,
-        });
-        bounds_group.addLayer(layer_Route_1);
-        map.addLayer(layer_Route_1);
-        function pop_Veer_2(feature, layer) {
+        layer_CartoDbDarkMatter_0;
+        map.addLayer(layer_CartoDbDarkMatter_0);
+        function pop_Veer_1(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Name'] !== null ? autolinker.link(feature.properties['Name'].toLocaleString()) : '') + '</td>\
@@ -149,43 +91,33 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_Veer_2_0() {
+        function style_Veer_1_0() {
             return {
-                pane: 'pane_Veer_2',
+                pane: 'pane_Veer_1',
                 opacity: 1,
-                color: 'rgba(85,121,25,1.0)',
+                color: 'rgba(27,163,175,1.0)',
                 dashArray: '',
                 lineCap: 'square',
                 lineJoin: 'bevel',
-                weight: 2.0,
+                weight: 3.0,
                 fillOpacity: 0,
-                interactive: true,
+                interactive: false,
             }
         }
-        map.createPane('pane_Veer_2');
-        map.getPane('pane_Veer_2').style.zIndex = 402;
-        map.getPane('pane_Veer_2').style['mix-blend-mode'] = 'normal';
-        var layer_Veer_2 = new L.geoJson(json_Veer_2, {
+        map.createPane('pane_Veer_1');
+        map.getPane('pane_Veer_1').style.zIndex = 401;
+        map.getPane('pane_Veer_1').style['mix-blend-mode'] = 'normal';
+        var layer_Veer_1 = new L.geoJson(json_Veer_1, {
             attribution: '',
-            interactive: true,
-            dataVar: 'json_Veer_2',
-            layerName: 'layer_Veer_2',
-            pane: 'pane_Veer_2',
-            onEachFeature: pop_Veer_2,
-            style: style_Veer_2_0,
+            interactive: false,
+            dataVar: 'json_Veer_1',
+            layerName: 'layer_Veer_1',
+            pane: 'pane_Veer_1',
+            onEachFeature: pop_Veer_1,
+            style: style_Veer_1_0,
         });
-        bounds_group.addLayer(layer_Veer_2);
-        map.addLayer(layer_Veer_2);
-        var osmGeocoder = new L.Control.Geocoder({
-            collapsed: true,
-            position: 'topleft',
-            text: 'Search',
-            title: 'Testing'
-        }).addTo(map);
-        document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
-        .className += ' fa fa-search';
-        document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
-        .title += 'Search for a place';
+        bounds_group.addLayer(layer_Veer_1);
+        map.addLayer(layer_Veer_1);
         setBounds();
         </script>
     </body>
