--- a/webapp/index.html
+++ b/webapp/index.html
@@ -28,22 +28,22 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="data/Route_1.js"></script>
+        <script src="data/Dissolved_1.js"></script>
         <script src="data/Veer_2.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[27.58417910794339,-179.71539580535725],[80.6347857157865,179.6196798516878]]);
+        }).fitBounds([[37.80229102026461,-37.668629480260996],[71.00457359007557,112.2044872027082]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
         }
-        map.createPane('pane_CartoDbDarkMatter_0');
-        map.getPane('pane_CartoDbDarkMatter_0').style.zIndex = 400;
-        var layer_CartoDbDarkMatter_0 = L.tileLayer('http://basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png', {
-            pane: 'pane_CartoDbDarkMatter_0',
+        map.createPane('pane_CartoDbPositron_0');
+        map.getPane('pane_CartoDbPositron_0').style.zIndex = 400;
+        var layer_CartoDbPositron_0 = L.tileLayer('http://basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
+            pane: 'pane_CartoDbPositron_0',
             opacity: 1.0,
             attribution: '',
             minZoom: 1,
@@ -51,12 +51,12 @@
             minNativeZoom: 0,
             maxNativeZoom: 20
         });
-        layer_CartoDbDarkMatter_0;
-        map.addLayer(layer_CartoDbDarkMatter_0);
-        function pop_Route_1(feature, layer) {
+        layer_CartoDbPositron_0;
+        map.addLayer(layer_CartoDbPositron_0);
+        function pop_Dissolved_1(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                        <td colspan="2"><strong>Name</strong><br />' + (feature.properties['Name'] !== null ? autolinker.link(feature.properties['Name'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['Name'] !== null ? autolinker.link(feature.properties['Name'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Type'] !== null ? autolinker.link(feature.properties['Type'].toLocaleString()) : '') + '</td>\
@@ -68,9 +68,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_Route_1_0() {
+        function style_Dissolved_1_0() {
             return {
-                pane: 'pane_Route_1',
+                pane: 'pane_Dissolved_1',
                 opacity: 1,
                 color: 'rgba(243,0,0,1.0)',
                 dashArray: '',
@@ -81,20 +81,20 @@
                 interactive: true,
             }
         }
-        map.createPane('pane_Route_1');
-        map.getPane('pane_Route_1').style.zIndex = 401;
-        map.getPane('pane_Route_1').style['mix-blend-mode'] = 'normal';
-        var layer_Route_1 = new L.geoJson(json_Route_1, {
+        map.createPane('pane_Dissolved_1');
+        map.getPane('pane_Dissolved_1').style.zIndex = 401;
+        map.getPane('pane_Dissolved_1').style['mix-blend-mode'] = 'normal';
+        var layer_Dissolved_1 = new L.geoJson(json_Dissolved_1, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_Route_1',
-            layerName: 'layer_Route_1',
-            pane: 'pane_Route_1',
-            onEachFeature: pop_Route_1,
-            style: style_Route_1_0,
+            dataVar: 'json_Dissolved_1',
+            layerName: 'layer_Dissolved_1',
+            pane: 'pane_Dissolved_1',
+            onEachFeature: pop_Dissolved_1,
+            style: style_Dissolved_1_0,
         });
-        bounds_group.addLayer(layer_Route_1);
-        map.addLayer(layer_Route_1);
+        bounds_group.addLayer(layer_Dissolved_1);
+        map.addLayer(layer_Dissolved_1);
         function pop_Veer_2(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
@@ -142,7 +142,7 @@
                 dashArray: '',
                 lineCap: 'square',
                 lineJoin: 'bevel',
-                weight: 3.0,
+                weight: 2.0,
                 fillOpacity: 0,
                 interactive: true,
             }
